--- a/homework.ipynb
+++ b/homework.ipynb
@@ -85,27 +85,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
     "# YOUR CHANGES HERE\n",
     "\n",
-    "p1 = np.array([1,9,6])"
+    "p1 = 16"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1, 9, 6])"
+       "16"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -886,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -945,7 +945,7 @@
        "rainy   0.1     0.2    0.7"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -962,30 +962,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
     "# YOUR CHANGES HERE\n",
     "\n",
-    "p10 = pd.Series([0.37, 0.21, 0.42], index=q10.index)"
+    "p10 = pd.Series([0.27777778, 0.27777778, 0.44444444], index=q10.index)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "sun       0.37\n",
-       "cloudy    0.21\n",
-       "rainy     0.42\n",
+       "sun       0.277778\n",
+       "cloudy    0.277778\n",
+       "rainy     0.444444\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1149,29 +1149,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
     "# YOUR CHANGES HERE\n",
     "\n",
-    "p12 = np.array([1,0,1,0,1,0,0,0,1]).reshape(3,3)"
+    "p12 = np.array([1,0,0,0,1,0,0,0,1]).reshape(3,3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1, 0, 1],\n",
+       "array([[1, 0, 0],\n",
        "       [0, 1, 0],\n",
        "       [0, 0, 1]])"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1429,7 +1429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1442,7 +1442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1451,7 +1451,7 @@
        "np.float64(0.3172631450999999)"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1496,33 +1496,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
     "# YOUR CHANGES HERE\n",
     "\n",
-    "p17 = np.array([[1. , 0. , 1. , 0. ],\n",
-    "                [0. , 1. , 0. , 2. ],\n",
-    "                [0. , 0. , 0. , 0.1],\n",
-    "                [0. , 0. , 0. , 0. ]])"
+    "p17 = np.array([[1., 0., 1., 0.],\n",
+    "                [0., 1., 0., 2.],\n",
+    "                [0., 0., 0., 1.],\n",
+    "                [0., 0., 0., 0.]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1. , 0. , 1. , 0. ],\n",
-       "       [0. , 1. , 0. , 2. ],\n",
-       "       [0. , 0. , 0. , 0.1],\n",
-       "       [0. , 0. , 0. , 0. ]])"
+       "array([[1., 0., 1., 0.],\n",
+       "       [0., 1., 0., 2.],\n",
+       "       [0., 0., 0., 1.],\n",
+       "       [0., 0., 0., 0.]])"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1574,25 +1574,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
-    "p18 = np.array([[1,2]])"
+    "p18 = np.array([1.0,2.0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1, 2]])"
+       "array([1., 2.])"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1740,7 +1740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -1750,7 +1750,7 @@
        "       [ 0.67235445,  0.74022936]])"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1764,27 +1764,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
     "# YOUR CHANGES HERE\n",
     "\n",
-    "p20 = np.arctan2(q20[0,1], q20[0,0])"
+    "p20 = np.arctan2(q20[1, 0], q20[0, 0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "np.float64(-0.7373849099999998)"
+       "np.float64(0.7373849099999998)"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
