--- a/homework.ipynb
+++ b/homework.ipynb
@@ -962,30 +962,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
     "# YOUR CHANGES HERE\n",
     "\n",
-    "p10 = pd.Series([0.27777778, 0.27777778, 0.44444444], index=q10.index)"
+    "p10 = pd.Series([1/3, 5/21, 3/7], index=q10.index)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "sun       0.277778\n",
-       "cloudy    0.277778\n",
-       "rainy     0.444444\n",
+       "sun       0.333333\n",
+       "cloudy    0.238095\n",
+       "rainy     0.428571\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1496,33 +1496,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
     "# YOUR CHANGES HERE\n",
     "\n",
     "p17 = np.array([[1., 0., 1., 0.],\n",
-    "                [0., 1., 0., 2.],\n",
+    "                [0., 1., 0., 0.],\n",
     "                [0., 0., 0., 1.],\n",
     "                [0., 0., 0., 0.]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "array([[1., 0., 1., 0.],\n",
-       "       [0., 1., 0., 2.],\n",
+       "       [0., 1., 0., 0.],\n",
        "       [0., 0., 0., 1.],\n",
        "       [0., 0., 0., 0.]])"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
